bpo-37025: AddRefActCtx() shouldn't be checked for failure

AddRefActCtx() does not return a value.